--- a/Android_example/app/build.gradle
+++ b/Android_example/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
     implementation 'com.google.code.gson:gson:2.8.5'
+    annotationProcessor("org.projectlombok:lombok:1.18.8")
+    compileOnly 'org.projectlombok:lombok:1.18.8'
 }
